# awsudo-py

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  tests.py  tox.ini
.circleci/: config.yml
awsudo_py/: awsudo.py
