[tool.poetry]
name = "awsudo-py"
version = "0.1.1"
description = "A sudo-like tool to configure AWS environment variables and call programs"
authors = ["Christopher Dignam <chris@dignam.xyz>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/chdsbd/awsudo-py"
keywords = ["aws","awscli"]
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Programming Language :: Python :: 3.6",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
python = "^3.6"
botocore = "^1.12"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.650.0"
black = {version = "^18.3-alpha.0"}
ipdb = "^0.11.0"

[tool.poetry.scripts]
awsudo = 'awsudo_py.awsudo:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
